# blog_writter

./: .env  main.py  mainn.py  pyproject.toml  requirements.txt
RAG/: rag.py
single-page/: latest_report.md  linkup_crew.py  tactics_report.md
